--- a/Natours/starter/sass/abstracts/_variables.scss
+++ b/Natours/starter/sass/abstracts/_variables.scss
@@ -14,6 +14,7 @@ $color-grey-light-2: #eee;
 
 $color-grey-dark: #777;
 $color-grey-dark-2: #999;
+$color-grey-dark-3: #333;
 
 $color-white: #fff;
 $color-black: #000;
@@ -28,3 +29,6 @@ $gutter-horizontal: 6rem;
 
 // BOX SHADOW
 $shadow-1: 0 1.5rem 4rem rgba($color-black, .15);
+
+//Z-INDEX
+$nav-toggle: 100;
