--- a/Natours/starter/sass/base/_base.scss
+++ b/Natours/starter/sass/base/_base.scss
@@ -1,9 +1,11 @@
 *,
 *::after,
-*::before {
+*::before,
+*::marker {
     box-sizing: inherit;
     margin: 0;
     padding: 0;
+    text-decoration: none;
 }
 
 html {
@@ -13,4 +15,8 @@ html {
 
 body {
     box-sizing: border-box;
+}
+
+ul {
+    list-style: none;
 }
